# BuildAnLLM

./: .gcloudignore  .gitignore  ARCHITECTURE_EXTENSIONS.md  DEMO.md  README.md  app.yaml  attention.py  config.py  deploy.sh  embed.py  generate_graphviz.py  gpt.py  infer.py  layernorm.py  main.py  mlp.py  model.py  positional_embedding.py  pyproject.toml  run.sh  run_runpod.sh  sampler.py  test.sh  tokenizer.py  train.py  trainer.py  training_utils.py  transformer_block.py  ui_components.py  utils.py
backend/app/: __init__.py  main.py
finetuning/data/: sft_dataset.py
finetuning/peft/: lora_utils.py  lora_wrappers.py
finetuning/training/: sft_trainer.py  sft_training_ui.py
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DemoBanner.tsx  GraphvizDiagram.tsx  Heatmap.tsx  LineChart.tsx  LogBox.tsx  Modal.tsx  ModelConfigSummary.tsx  Nav.tsx  PlausibleAnalytics.tsx  RangeSlider.tsx  SideNav.tsx  SystemInfoPanel.tsx  TokenRainbow.tsx  TokenSegments.tsx  TrainingControls.tsx
frontend/e2e/: smoke.spec.ts
frontend/lib/: demo.ts  env.ts  equations.ts  graphviz.ts  time.ts  useScrollSpy.ts
frontend/test/: README.md  api.test.ts  dataSources.property.test.ts  env.test.ts  equations.test.ts  graphviz.property.test.ts  modelConfig.property.test.ts  modelConfig.test.ts  setup.ts  time.test.ts  useScrollSpy.test.tsx  useSse.test.tsx
frontend/test-results/: .last-run.json
inference/: sampler.py
input_data/pretraining/: aljbr.txt  aryabhata.txt  donquixote.txt  gita.txt  proust.txt  wells.txt  wilde.txt  woolf.txt
pages/: 1_Pre-Training.py  1_Training.py  2_Fine-Tuning.py  2_Inference.py  3_Inference.py  4_Playground.py
tests/: README.md  __init__.py  conftest.py
(+89 files in other folders)
