[project]
name = "transformer-training"
version = "0.1.0"
description = "Transformer training and inference with Streamlit UI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "einops>=0.7.0",
    "jaxtyping>=0.2.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "sentencepiece>=0.1.99",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
]

