[project]
name = "transformer-training"
version = "0.1.0"
description = "Transformer training and inference with FastAPI + Next.js UI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "einops>=0.7.0",
    "jaxtyping>=0.2.0",
    "numpy>=1.24.0",
    "tiktoken>=0.5.0",
    "sentencepiece>=0.1.99",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "psutil>=7.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "property: Property-based tests for mathematical properties",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    # Suppress SentencePiece deprecation warnings from C++ bindings
    # These are internal library warnings, not actionable for our code
    "ignore::DeprecationWarning:sentencepiece",
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
